--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex</title>
-    <link rel="stylesheet" href="./assets/css/index.css">
+      <link rel="stylesheet" href="./assets/css/global.css">
+  <link rel="stylesheet" href="./assets/css/index.css">
 </head>
 <body>
     <div class="container">
@@ -52,7 +53,13 @@
 
             </div>
         </div>
-
+    <div class="blur-bg ">
+        <div class="add-pokemon-form">
+            <input type="text"/>
+            <button class="add-btn">Add</button>
+             <button class="close-btn">Close</button>
+        </div>
+    </div>
         <!-- Pokémon List -->
         <div class="pokemons">
             <div class="pokemons-header">
