--- a/battle.html
+++ b/battle.html
@@ -10,6 +10,12 @@
 </head>
 <body>
   <div class="container">
+     <div class="blur-bg">
+         <div class="choose-pokemon-cont">
+
+         </div>
+      
+     </div>
       <div class="battle-prompt-popup">
       <p class="msg">
         Lorem ipsum dolor.
