--- a/enemy.html
+++ b/enemy.html
@@ -1,41 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enemy Selection</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Enemy Selection</title>
 </head>
 <body>
-    <label for="enemy">Choose Enemy</label>
-    <input list="enemy-data-list" id="enemy" onblur="showStats()">
-    <datalist id="enemy-data-list"></datalist>
-    <br>
-    <label for="level-inp">Level</label>
-    <input type="number" id="level-inp" value="1" onchange="showStats()">
-    <br>
-    <label for="retreat-inp">Retreat</label>
-    <input type="number" id="retreat-inp" value="2">
-    <br>
-    <label for="nature-inp">Nature</label>
-    <input list="natures-data-list" value="calm"  name="nature-inp" type="text" onblur="showStats()" id="nature-inp">
-    <datalist id="natures-data-list"></datalist>
-    <br>
-    <label for="token-inp">Token Used</label>
-    <textarea name="token-inp" onblur="showStats()" id="token-inp"></textarea>
-    <br>
-    <pre id="enemy-stats"></pre>
-    <br>
-    <h3>Moves</h3>
-    <input type="text" list="moves-data-list" id="move-input-1">
-    <input type="text" list="moves-data-list" id="move-input-2">
-    <input type="text" list="moves-data-list" id="move-input-3">
-    <input type="text" list="moves-data-list" id="move-input-4">
-    <input type="text" list="moves-data-list" id="move-input-5">
-    <datalist id="moves-data-list"></datalist>
-    <br>
-    <button onclick="startBattle()">Start Battle</button>
-    <br><br><br><br></br>
-    <button onclick="randomBattle()">Random Battle</button>
+  <label for="enemy">Choose Enemy</label>
+  <input list="enemy-data-list" id="enemy" onblur="showStats()">
+  <datalist id="enemy-data-list"></datalist>
+  <br>
+  <label for="level-inp">Level</label>
+  <input type="number" id="level-inp" value="1" onchange="showStats()">
+  <br>
+  <label for="retreat-inp">Retreat</label>
+  <input type="number" id="retreat-inp" value="2">
+  <br>
+  <label for="nature-inp">Nature</label>
+  <input list="natures-data-list" value="calm" name="nature-inp" type="text" onblur="showStats()" id="nature-inp">
+  <datalist id="natures-data-list"></datalist>
+  <br>
+  <label for="token-inp">Token Used</label>
+  <textarea name="token-inp" onblur="showStats()" id="token-inp"></textarea>
+  <br>
+  <pre id="enemy-stats"></pre>
+  <br>
+  <h3>Moves</h3>
+  <input onkeyup="showMoveDetails(event)" type="text" list="moves-data-list" id="move-input-1">
+  <input onkeyup="showMoveDetails(event)" type="text" list="moves-data-list" id="move-input-2">
+  <input onkeyup="showMoveDetails(event)" type="text" list="moves-data-list" id="move-input-3">
+  <input onkeyup="showMoveDetails(event)" type="text" list="moves-data-list" id="move-input-4">
+  <input onkeyup="showMoveDetails(event)" type="text" list="moves-data-list" id="move-input-5">
+  <datalist id="moves-data-list"></datalist>
+  <br>
+  <div id="move-details">
+    <strong class="move-name">name</strong>
+    <span class="desc">Lorem ipsum dolor.</span>
+  </div>
+  <button onclick="startBattle()">Start Battle</button>
+  <br><br><br><br></br>
+  <button onclick="randomBattle()">Random Battle</button>
 </body>
 <script type="module" src="./assets/js/enemy.js"></script>
 </html>
